# bsuite-core

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/bsuite-core/: Cargo.toml
crates/bsuite-core/keys/: trust-bundle-v1.toml
crates/bsuite-core/src/: adapter_host_bind.rs  corpus.rs  error.rs  exit_code.rs  lib.rs  manifest_overlay.rs  opacity_hook.rs  prompt_resolver.rs  routing_key.rs  transcript_writer.rs  upgrade_carrier.rs
crates/bsuite-core/src/manifest_overlay/: allowlist.rs  error.rs  fs_reader.rs  mod.rs  signature.rs  types.rs
crates/bsuite-core/src/opacity_hook/: mod.rs  section.rs  types.rs  verify.rs
crates/bsuite-core/tests/: adapter_host_bind_contract.rs  corpus_signature_contract.rs  corpus_toml_grammar.rs  exit_code_contract.rs  exit_code_emitter_contract.rs  exit_code_routing.rs  fixture_corpus_self_verify.rs  host_context_contract.rs  manifest_overlay_contract.rs  opacity_hook_contract.rs  prompt_resolver_contract.rs  prompt_resolver_corpus_lookup.rs  routing_key_contract.rs  transcript_concurrency.rs  transcript_writer_contract.rs  upgrade_carrier_contract.rs
crates/bsuite-core/tests/common/: mod.rs
crates/bsuite-core/tests/fixtures/: corpus-sample-v1.toml
crates/bsuite-core/tests/transcript_common/: mod.rs
scripts/: public_voice_guard.sh
