[package]
name = "bsuite-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared CLI plumbing library for the b-* command-line suite."
repository.workspace = true
readme = "../../README.md"

[dependencies]
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true
