[package]
name = "bsuite-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared types and helpers that the b-* command-line prompt-lookup tools link at build time."
repository.workspace = true
readme = "../../README.md"

[dependencies]
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true
