[package]
name = "bsuite-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared types and helpers that the b-* command-line prompt-lookup tools link at build time."
repository.workspace = true
readme = "../../README.md"

[dependencies]
base64.workspace = true
chrono.workspace = true
ed25519-dalek.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_json_canonicalizer.workspace = true
reqwest.workspace = true
semver.workspace = true
sha2.workspace = true
tar.workspace = true
thiserror.workspace = true
toml.workspace = true

[dev-dependencies]
criterion = "0.5"
proptest.workspace = true
httpmock.workspace = true
tempfile.workspace = true

[[bench]]
name = "corpus_lookup"
harness = false
